fix: star z-index

--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -6,7 +6,7 @@
   background-color: white;
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 8;
 }
 .header-container {
   display: flex;
